--- a/Notebook 2 Feature Engineering.ipynb
+++ b/Notebook 2 Feature Engineering.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aujourd'hui on se fait rouler par les mecs de l'ENS\n",
+    "\n",
+    "\n",
+    "https://challengedata.ens.fr/en/challenge/39/prediction_of_transaction_claims_status.html\n",
+    "\n",
+    "\n",
+    "Ici, c'est le notebook dédié au feature enginering - aka: le plus important de tous"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -328,49 +341,6 @@
    ],
    "source": [
     "train_df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "_cell_guid": "cd19a6f6-347f-be19-607b-dca950590b37",
-    "_uuid": "1d7acf42af29a63bc038f14eded24e8b8146f541"
-   },
-   "source": [
-    "A l'état initial nous avons comme type de variables\n",
-    "\n",
-    "**Variables Catégorielles**\n",
-    "1. `SHIPPING_MODE`\n",
-    "2. `SELLER_COUNTRY`\n",
-    "3. `PRODUCT_TYPE`\n",
-    "4. `PRODUCT_FAMILY`\n",
-    "5. `CLAIM_TYPE` - La target\n",
-    "\n",
-    "**Variables Booléennes**\n",
-    "1. `WARRANTIES_FLG`\n",
-    "2. `CARD_PAYMENT`\n",
-    "3. `COUPON_PAYMENT`\n",
-    "4. `RSP_PAYMENT`\n",
-    "5. `WALLET_PAYMENT`\n",
-    "\n",
-    "**Variables Numériques Discrètes**\n",
-    "1. `REGISTRATION_DATE`\n",
-    "2. `BUYER_BIRTHDAY_DATE`\n",
-    "3. `BUYING_DATE`\n",
-    "4. `BUYER_DEPARTMENT` - Que je propose de passer maitenent en catégorie, puisque les nombres n'ont pas de valeur + ou -\n",
-    "5. `SELLER_DEPARTMENT` - Que je propose de passer maitenent en catégorie, puisque les nombres n'ont pas de valeur + ou -\n",
-    "\n",
-    "**Variables Numériques Continues**\n",
-    " - Aucune\n",
-    "\n",
-    "**Variables Ordinales**\n",
-    "1. `SHIPPING_PRICE`\n",
-    "2. `WARRANTIES_PRICE`\n",
-    "3. `PRICECLUB_STATUS`\n",
-    "4. `PURCHASE_COUNT`\n",
-    "5. `SELLER_SCORE_COUNT`\n",
-    "6. `SELLER_SCORE_AVERAGE`\n",
-    "7. `ITEM_PRICE`"
    ]
   },
   {
@@ -843,13 +813,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Actuellement, il nous reste quatre variables catégorielles:\n",
+    "Actuellement, il nous reste encore quatre variables catégorielles:\n",
     "1. `SHIPPING_MODE`\n",
     "2. `SELLER_COUNTRY`\n",
     "3. `PRODUCT_TYPE`\n",
     "4. `PRODUCT_FAMILY`\n",
     "\n",
-    "Il n'y a pas de classement à faire entre ces catégories, on verra ça dans le Notebook 2 Feature Engineering.\n",
+    "Mais bon, `SELLER_COUNTRY` a maintenant plusieurs représentations numériques, donc en vrai, il n'en reste que 3.\n",
+    "\n",
+    "On va voir ce qu'on peut faire avec `PRODUCT_TYPE` dans le  `Notebook 3 Stat des Sellers et clients`\n",
     "\n",
     "Mais quel teasing!\n",
     "\n",
@@ -865,8 +837,11 @@
     "filename_train = DATA_PROCESSED+\"/train.csv\"\n",
     "filename_test = DATA_PROCESSED+\"/test.csv\"\n",
     "\n",
-    "os.remove(filename_train)\n",
-    "os.remove(filename_test)\n",
+    "try:\n",
+    "    os.remove(filename_train)\n",
+    "    os.remove(filename_test)\n",
+    "except:\n",
+    "    pass;\n",
     "\n",
     "train_df.to_csv(filename_train, index=False, sep=\";\")\n",
     "test_df.to_csv(filename_test, index=False, sep=\";\")"
