--- a/Notebook 4 Submitter.ipynb
+++ b/Notebook 4 Submitter.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,12 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Where to save the figures\n",
-    "PROJECT_ROOT_DIR = \"..\\..\"\n",
+    "PROJECT_ROOT_DIR = \".\"\n",
     "DATA_PROCESSED = os.path.join(PROJECT_ROOT_DIR, \"data_processed\")"
    ]
   },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,12 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "TX_data.drop(['CARD_PAYMENT','COUPON_PAYMENT','RSP_PAYMENT','WALLET_PAYMENT'], axis = 1, inplace = True)\n",
     "TEST_DATA.drop(['CARD_PAYMENT','COUPON_PAYMENT','RSP_PAYMENT','WALLET_PAYMENT'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TX_data.info()"
    ]
   },
   {
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,20 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "35"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train, Y_train = datapreprocess(TX_data)\n",
     "TEST_DATA, _ = datapreprocess(TEST_DATA)\n",
@@ -232,109 +230,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gradient Boosting Classifier"
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Core XGBoost Library VS scikit-learn API\n",
+    "\n",
+    "Models can be trained in two different ways:\n",
+    "\n",
+    "1. Directly using the core library – this is closer to the implementation of the caret-package in R\n",
+    "2. Using the scikit-learn API – this means that the models are implemented in a way that lets the scikit package recognize it as one of it’s own models.\n",
+    "\n",
+    "Nous, on va travailler avec l'API de Sklearn, c'est pas optimisé mais plus simple. De toute façon, j'arrive pas à utiliser le Core, a cause des DMatrix qui veulent que des numerics en entrées\n",
+    "\n",
+    "Doc des paramètres: https://github.com/dmlc/xgboost/blob/master/doc/parameter.md\n",
+    "\n",
+    "Doc sur le tunning : https://www.analyticsvidhya.com/blog/2016/03/complete-guide-parameter-tuning-xgboost-with-codes-python/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from xgboost import XGBClassifier\n",
     "from sklearn.utils.class_weight import compute_sample_weight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_weight_arr = compute_sample_weight(class_weight='balanced', y=Y_train)\n",
-    "sample_weight_dict = {'sample_weight':compute_sample_weight(class_weight='balanced', y=Y_train)}"
+    "sample_weight_arr = compute_sample_weight(class_weight='balanced', y=Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_GB={\n",
-    "            'criterion':'friedman_mse',\n",
-    "            'init':None,\n",
-    "            'learning_rate':0.25,\n",
-    "            'loss':'deviance',\n",
-    "            'max_depth':3,\n",
-    "            'max_features':'auto',\n",
-    "            'max_leaf_nodes':4,\n",
-    "            'min_impurity_decrease':0.0,\n",
-    "            'min_impurity_split':None,\n",
-    "            'min_samples_leaf':2,\n",
-    "            'min_samples_split':3,\n",
-    "            'min_weight_fraction_leaf':0.0,\n",
-    "            'n_estimators':1000,\n",
-    "            'presort':'auto',\n",
-    "            'random_state':RANDOM_SEED,\n",
-    "            'subsample':0.8,\n",
-    "            'verbose':0,\n",
-    "            'warm_start':False\n",
+    "params_XGB={\n",
+    "# General Parameters -  the overall functioning\n",
+    "    'booster':'gbtree',\n",
+    "    'silent':0,\n",
+    "    #'nthread':4, # Je le commente, puisque il détecte automatiquement le nombre de cores qu'il peut utiliser.\n",
+    "    'n_estimators' : 1000,\n",
+    "    \n",
+    "# Booster Parameters - the individual booster (tree/regression) at each step\n",
+    "    'learning_rate' : 0.1,\n",
+    "    'min_child_weight' : 1, #A smaller value is chosen because it is a highly imbalanced class problem and leaf nodes can have smaller size groups.\n",
+    "    'max_depth' : 3,\n",
+    "    #'max_leaf_nodes':None, #If this is defined, GBM will ignore max_depth.\n",
+    "    'gamma' : 0.3,\n",
+    "    'max_delta_step':4, #it might help in logistic regression when class is extremely imbalanced/ 1-10 might help control the update\n",
+    "    'subsample' : 0.55,\n",
+    "    'colsample_bytree' : 0.85,\n",
+    "    'colsample_bylevel':1, #default\n",
+    "    'reg_lambda' : 1, #default\n",
+    "    'reg_alpha':0,\n",
+    "    'scale_pos_weight' : sample_weight_arr,\n",
+    "\n",
+    "# Learning Task Parameters -  the optimization performed\n",
+    "    'objective' : 'multi:softmax', # you also need to set an additional num_class (number of classes)\n",
+    "    'num_class' : len(Y_train.unique()),\n",
+    "    'eval_metric':\"auc\",\n",
+    "    'seed' : RANDOM_SEED,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gb_clf=GradientBoostingClassifier(**params_GB)"
+    "xgb_clf = XGBClassifier(**params_XGB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
-       "              learning_rate=0.25, loss='deviance', max_depth=3,\n",
-       "              max_features='auto', max_leaf_nodes=4,\n",
-       "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "              min_samples_leaf=2, min_samples_split=3,\n",
-       "              min_weight_fraction_leaf=0.0, n_estimators=1000,\n",
-       "              presort='auto', random_state=42, subsample=0.8, verbose=0,\n",
-       "              warm_start=False)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gb_clf.fit(\n",
-    "            X=X_train, \n",
-    "            y=Y_train, \n",
-    "            sample_weight=sample_weight_arr\n",
-    "          )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_gb = gb_clf.predict(TEST_DATA)"
+    "xgb_clf.fit(\n",
+    "    X=X_train, \n",
+    "    y=Y_train, \n",
+    "    sample_weight=sample_weight_arr, \n",
+    "    eval_set=None, \n",
+    "    eval_metric='auc', \n",
+    "    early_stopping_rounds=None, \n",
+    "    verbose=True, \n",
+    "    xgb_model=None\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_gb = xgb_clf.predict(TEST_DATA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,89 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>CLAIM_TYPE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>NOT_RECEIVED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100001</td>\n",
-       "      <td>WITHDRAWAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>100002</td>\n",
-       "      <td>SELLER_CANCEL_POSTERIORI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100003</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100004</td>\n",
-       "      <td>DAMAGED</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       ID                CLAIM_TYPE\n",
-       "0  100000              NOT_RECEIVED\n",
-       "1  100001                WITHDRAWAL\n",
-       "2  100002  SELLER_CANCEL_POSTERIORI\n",
-       "3  100003                         -\n",
-       "4  100004                   DAMAGED"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "RESULTS.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = DATA_PROCESSED+\"/submission_GB_1.csv\"\n",
+    "filename = DATA_PROCESSED+\"/submission_XBG_1.csv\"\n",
     "\n",
     "RESULTS.to_csv(filename, index=False, sep=\";\")"
    ]
