Remove features engineering plus XGBooost

--- a/Notebook 4 Submitter.ipynb
+++ b/Notebook 4 Submitter.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +165,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 29 columns):\n",
+      "SHIPPING_MODE                100000 non-null object\n",
+      "SHIPPING_PRICE               100000 non-null int64\n",
+      "PRICECLUB_STATUS             100000 non-null int64\n",
+      "REGISTRATION_DATE            100000 non-null int64\n",
+      "PURCHASE_COUNT               100000 non-null int64\n",
+      "BUYER_BIRTHDAY_DATE          100000 non-null float64\n",
+      "BUYING_DATE                  100000 non-null int64\n",
+      "SELLER_SCORE_COUNT           100000 non-null int64\n",
+      "SELLER_SCORE_AVERAGE         100000 non-null float64\n",
+      "SELLER_COUNTRY               100000 non-null object\n",
+      "PRODUCT_TYPE                 100000 non-null object\n",
+      "PRODUCT_FAMILY               100000 non-null object\n",
+      "ITEM_PRICE                   100000 non-null int64\n",
+      "CLAIM_TYPE                   100000 non-null object\n",
+      "WARRANTY_COV_RATE            100000 non-null float64\n",
+      "SELLER_COUNTRY_PIB           100000 non-null int64\n",
+      "SELLER_COUNTRY_DISTANCE      100000 non-null int64\n",
+      "BUYER_DEPARTMENT_DENSITY     100000 non-null int64\n",
+      "SELLER_DEPARTMENT_DENSITY    100000 non-null int64\n",
+      "BUYER_DEPARTMENT_PIB         100000 non-null int64\n",
+      "SELLER_DEPARTMENT_PIB        100000 non-null int64\n",
+      "CAC_POINTS                   100000 non-null int64\n",
+      "CAC_VAR                      100000 non-null int64\n",
+      "IS_HOLIDAYS                  100000 non-null int64\n",
+      "Mean_Claims_Sells_ID         100000 non-null float64\n",
+      "STD_Claims_Sells_ID          100000 non-null float64\n",
+      "Count_PRODUCT_TYPE           100000 non-null float64\n",
+      "Mean_Claims_PRODUCT_TYPE     100000 non-null float64\n",
+      "STD_Claims_PRODUCT_TYPE      100000 non-null float64\n",
+      "dtypes: float64(8), int64(16), object(5)\n",
+      "memory usage: 22.1+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "TX_data.info()"
    ]
@@ -181,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train, Y_train = datapreprocess(TX_data)\n",
     "TEST_DATA, _ = datapreprocess(TEST_DATA)\n",
@@ -253,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +340,7 @@
     "# Booster Parameters - the individual booster (tree/regression) at each step\n",
     "    'learning_rate' : 0.1,\n",
     "    'min_child_weight' : 1, #A smaller value is chosen because it is a highly imbalanced class problem and leaf nodes can have smaller size groups.\n",
-    "    'max_depth' : 3,\n",
+    "    'max_depth' : 4,\n",
     "    #'max_leaf_nodes':None, #If this is defined, GBM will ignore max_depth.\n",
     "    'gamma' : 0.3,\n",
     "    'max_delta_step':4, #it might help in logistic regression when class is extremely imbalanced/ 1-10 might help control the update\n",
@@ -307,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,9 +370,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=0.85, eval_metric='auc', gamma=0.3,\n",
+       "       learning_rate=0.1, max_delta_step=4, max_depth=4,\n",
+       "       min_child_weight=1, missing=None, n_estimators=1000, n_jobs=1,\n",
+       "       nthread=None, num_class=8, objective='multi:softprob',\n",
+       "       random_state=0, reg_alpha=0, reg_lambda=1,\n",
+       "       scale_pos_weight=array([ 2.11077,  0.25012, ...,  1.78546,  0.25012]),\n",
+       "       seed=42, silent=0, subsample=0.55)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "xgb_clf.fit(\n",
     "    X=X_train, \n",
@@ -334,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,20 +424,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>CLAIM_TYPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100000</td>\n",
+       "      <td>SELLER_CANCEL_POSTERIORI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100001</td>\n",
+       "      <td>WITHDRAWAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100002</td>\n",
+       "      <td>SELLER_CANCEL_POSTERIORI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100003</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100004</td>\n",
+       "      <td>DAMAGED</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID                CLAIM_TYPE\n",
+       "0  100000  SELLER_CANCEL_POSTERIORI\n",
+       "1  100001                WITHDRAWAL\n",
+       "2  100002  SELLER_CANCEL_POSTERIORI\n",
+       "3  100003                         -\n",
+       "4  100004                   DAMAGED"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "RESULTS.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = DATA_PROCESSED+\"/submission_XBG_1.csv\"\n",
+    "filename = DATA_PROCESSED+\"/submission_XBG_2.csv\"\n",
     "\n",
     "RESULTS.to_csv(filename, index=False, sep=\";\")"
    ]
