--- a/Notebook 3 Stats des SELLERS et CLIENT.ipynb
+++ b/Notebook 3 Stats des SELLERS et CLIENT.ipynb
@@ -333,7 +333,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 100000 entries, 0 to 99999\n",
-      "Data columns (total 46 columns):\n",
+      "Data columns (total 54 columns):\n",
       "SHIPPING_MODE                 100000 non-null object\n",
       "SHIPPING_PRICE                100000 non-null int64\n",
       "WARRANTIES_FLG                100000 non-null bool\n",
@@ -380,8 +380,16 @@
       "CAC_VAR                       100000 non-null int64\n",
       "IS_HOLIDAYS                   100000 non-null int64\n",
       "IS_SALES                      100000 non-null int64\n",
-      "dtypes: bool(1), float64(13), int64(27), object(5)\n",
-      "memory usage: 34.4+ MB\n"
+      "Delivery_Quality              100000 non-null int64\n",
+      "PGC_FAMILY                    100000 non-null int64\n",
+      "PGC_TYPE                      100000 non-null int64\n",
+      "Daily_Usage                   100000 non-null int64\n",
+      "Consommable                   100000 non-null int64\n",
+      "New_Techno                    100000 non-null int64\n",
+      "Long_Term_Usage               100000 non-null int64\n",
+      "Achat_Passion                 100000 non-null int64\n",
+      "dtypes: bool(1), float64(13), int64(35), object(5)\n",
+      "memory usage: 40.5+ MB\n"
      ]
     }
    ],
@@ -396,9 +404,9 @@
     "## Plan d'action\n",
     "\n",
     "Idées de features engineering:\n",
-    "0. faire la variable \"IS_CLAIM\"\n",
-    "1. Trouver les ID des SELLERS\n",
-    "2. Trouver des stats par produits"
+    "1. faire la variable \"IS_CLAIM\"\n",
+    "2. Trouver les ID des SELLERS\n",
+    "3. Trouver des stats par produits"
    ]
   },
   {
@@ -574,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Forcément, on a pas pu tout matcher dans la base de test, donc faut remplir tout ça."
+    "### Calcul des stats des produits"
    ]
   },
   {
@@ -583,38 +591,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_train= train_df.Count_Sells_ID.mean()\n",
-    "train_df.Count_Sells_ID.fillna(value=count_train, inplace=True)\n",
-    "test_df.Count_Sells_ID.fillna(value=count_train, inplace=True)\n",
-    "\n",
-    "mean_train= train_df.Mean_Claims_Sells_ID.mean()\n",
-    "train_df.Mean_Claims_Sells_ID.fillna(value=mean_train, inplace=True)\n",
-    "test_df.Mean_Claims_Sells_ID.fillna(value=mean_train, inplace=True)\n",
-    "\n",
-    "std_train= train_df.STD_Claims_Sells_ID.mean()\n",
-    "train_df.STD_Claims_Sells_ID.fillna(value=std_train, inplace=True)\n",
-    "test_df.STD_Claims_Sells_ID.fillna(value=std_train, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calcul des stats des produits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "description_sellers=train_df['IS_CLAIM'].groupby(train_df['PRODUCT_TYPE']).describe().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,9 +622,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quelle horreur : remplir les variables avec la moyenne\n",
-    "\n",
-    "Faudrait passer en RandomForest"
+    "## Vérification par filler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Le test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Donc on a 176 STD manquantes sur le train, mais c'est simplement car il n'y a eu qu'une vente pour le vendeur, donc un bon filler serait de le mettre à `0`"
    ]
   },
   {
@@ -651,14 +654,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_df.STD_Claims_Sells_ID.fillna(value=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Le train set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Liste des valeurs manquantes: \n",
+    "1. Count_Sells_ID : __203 (0,2%)__ valeurs manquantes\n",
+    "2. Mean_Claims_Sells_ID : __203 (0,2%)__ valeurs manquantes\n",
+    "3. STD_Claims_Sells_ID : __406 (0,4%)__ valeurs manquantes\n",
+    "4. Count_PRODUCT_TYPE : __5__ valeurs manquantes\n",
+    "5. Mean_Claims_PRODUCT_TYPE : __5__ valeurs manquantes\n",
+    "6. STD_Claims_PRODUCT_TYPE : __14__ non-null float64\n",
+    "\n",
+    "Donc il y a maximum __203__ nouveaux vendeurs, et maximum __5__ nouveaux types de produits.\n",
+    "\n",
+    "Mais comme les nombres sont tout petits par rapport à la taille du test set, je pense que faire des moyenne sera suffisant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Les Sells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count_Sells_ID\n",
+    "count_train= train_df.Count_Sells_ID.mean()\n",
+    "test_df.Count_Sells_ID.fillna(value=count_train, inplace=True)\n",
+    "\n",
+    "# Mean_Claims_Sells_ID\n",
+    "mean_train= train_df.Mean_Claims_Sells_ID.mean()\n",
+    "test_df.Mean_Claims_Sells_ID.fillna(value=mean_train, inplace=True)\n",
+    "\n",
+    "# Mean_Claims_Sells_ID\n",
+    "std_train= train_df.STD_Claims_Sells_ID.mean()\n",
+    "test_df.STD_Claims_Sells_ID.fillna(value=std_train, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Les product types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count_PRODUCT_TYPE\n",
     "count_train= train_df.Count_PRODUCT_TYPE.mean()\n",
-    "train_df.Count_PRODUCT_TYPE.fillna(value=count_train, inplace=True)\n",
     "test_df.Count_PRODUCT_TYPE.fillna(value=count_train, inplace=True)\n",
     "\n",
+    "# Mean_Claims_PRODUCT_TYPE\n",
     "mean_train= train_df.Mean_Claims_PRODUCT_TYPE.mean()\n",
-    "train_df.Mean_Claims_PRODUCT_TYPE.fillna(value=mean_train, inplace=True)\n",
     "test_df.Mean_Claims_PRODUCT_TYPE.fillna(value=mean_train, inplace=True)\n",
     "\n",
+    "# STD_Claims_PRODUCT_TYPE\n",
     "std_train= train_df.STD_Claims_PRODUCT_TYPE.mean()\n",
     "train_df.STD_Claims_PRODUCT_TYPE.fillna(value=std_train, inplace=True)\n",
     "test_df.STD_Claims_PRODUCT_TYPE.fillna(value=std_train, inplace=True)"
@@ -673,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
